--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -1,15 +1,15 @@
 ﻿<Window x:Class="ImageStatsWpf.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Image Stats - POwB Lab1" Height="720" Width="1000">
+        Title="Image Stats" Height="720" Width="1000">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
 
-        <StackPanel Orientation="Horizontal" Margin="8" Grid.Row="0" VerticalAlignment="Center" >
-            <Button Name="BtnLoad" Click="BtnLoad_Click" Margin="4">Wczytaj obraz</Button>
+        <StackPanel Orientation="Horizontal" Margin="8" Grid.Row="0" VerticalAlignment="Center">
+            <Button Name="BtnLoad" Click="BtnLoad_Click" Margin="4">Load Image</Button>
             <TextBlock Name="TbFileName" VerticalAlignment="Center" Margin="8,0,0,0"/>
         </StackPanel>
 
@@ -34,8 +34,8 @@
             <!-- Stats panel -->
             <Border Grid.Column="1" Margin="8" Padding="8" Background="#FFF8F8F8" BorderBrush="#FFCCCCCC" BorderThickness="1">
                 <StackPanel>
-                    <TextBlock FontSize="16" FontWeight="Bold" Margin="0,0,0,8">Statystyki kanałów (R, G, B)</TextBlock>
-                    <TextBlock Name="TbSelection" Text="Brak zaznaczenia" Margin="0,0,8,8"/>
+                    <TextBlock FontSize="16" FontWeight="Bold" Margin="0,0,0,8">Channel Statistics (R, G, B)</TextBlock>
+                    <TextBlock Name="TbSelection" Text="No selection" Margin="0,0,8,8"/>
                     <Grid>
                         <Grid.RowDefinitions>
                             <RowDefinition Height="Auto"/>
@@ -55,26 +55,26 @@
                         <TextBlock Grid.Row="0" Grid.Column="2" Text="G" FontWeight="Bold" HorizontalAlignment="Center"/>
                         <TextBlock Grid.Row="0" Grid.Column="3" Text="B" FontWeight="Bold" HorizontalAlignment="Center"/>
 
-                        <TextBlock Grid.Row="1" Grid.Column="0" Text="Średnia:"/>
+                        <TextBlock Grid.Row="1" Grid.Column="0" Text="Mean:"/>
                         <TextBlock Grid.Row="1" Grid.Column="1" Name="TbMeanR" HorizontalAlignment="Center"/>
                         <TextBlock Grid.Row="1" Grid.Column="2" Name="TbMeanG" HorizontalAlignment="Center"/>
                         <TextBlock Grid.Row="1" Grid.Column="3" Name="TbMeanB" HorizontalAlignment="Center"/>
 
-                        <TextBlock Grid.Row="2" Grid.Column="0" Text="Mediana:"/>
+                        <TextBlock Grid.Row="2" Grid.Column="0" Text="Median:"/>
                         <TextBlock Grid.Row="2" Grid.Column="1" Name="TbMedR" HorizontalAlignment="Center"/>
                         <TextBlock Grid.Row="2" Grid.Column="2" Name="TbMedG" HorizontalAlignment="Center"/>
                         <TextBlock Grid.Row="2" Grid.Column="3" Name="TbMedB" HorizontalAlignment="Center"/>
 
-                        <TextBlock Grid.Row="3" Grid.Column="0" Text="Odch.std.:"/>
+                        <TextBlock Grid.Row="3" Grid.Column="0" Text="Std Dev:"/>
                         <TextBlock Grid.Row="3" Grid.Column="1" Name="TbStdR" HorizontalAlignment="Center"/>
                         <TextBlock Grid.Row="3" Grid.Column="2" Name="TbStdG" HorizontalAlignment="Center"/>
                         <TextBlock Grid.Row="3" Grid.Column="3" Name="TbStdB" HorizontalAlignment="Center"/>
                     </Grid>
 
-                    <Button Name="BtnClearSelection" Click="BtnClearSelection_Click" Margin="0,12,0,0">Wyczyść zaznaczenie</Button>
+                    <Button Name="BtnClearSelection" Click="BtnClearSelection_Click" Margin="0,12,0,0">Clear Selection</Button>
 
                     <TextBlock Margin="0,12,0,0" FontSize="12" TextWrapping="Wrap">
-                        Instrukcja: wczytaj obraz, przytrzymaj lewy przycisk myszy i przeciągnij aby zaznaczyć prostokąt. Po puszczeniu myszy statystyki zostaną wyliczone.
+                        Instructions: Load an image, hold the left mouse button and drag to select a rectangle. After releasing the mouse, statistics will be calculated.
                     </TextBlock>
                 </StackPanel>
             </Border>
